vlib/v/checker/tests/fixed_array_conv.out
vlib/v/checker/tests/fixed_array_conv.vv:3:5: notice: left-side of assignment expects a mutable reference, but variable `arr` is immutable, declare it with `mut` to make it mutable or clone it
    1 | arr := [2, 3]!
    2 | mut p := unsafe { nil }
    3 | p = arr
      |     ~~~
    4 | mut ip := &int(unsafe { nil })
    5 | ip = arr
vlib/v/checker/tests/fixed_array_conv.vv:5:6: notice: left-side of assignment expects a mutable reference, but variable `arr` is immutable, declare it with `mut` to make it mutable or clone it
    3 | p = arr
    4 | mut ip := &int(unsafe { nil })
    5 | ip = arr
      |      ~~~
    6 | _ = &int(arr)
    7 | _ = p
vlib/v/checker/tests/fixed_array_conv.vv:6:5: warning: cannot cast a fixed array (use e.g. `&arr[0]` instead)
    4 | mut ip := &int(unsafe { nil })
    5 | ip = arr
    6 | _ = &int(arr)
      |     ~~~~~~~~~
    7 | _ = p
    8 | _ = ip
vlib/v/checker/tests/fixed_array_conv.vv:3:3: error: mismatched types `voidptr` and `[2]int`
    1 | arr := [2, 3]!
    2 | mut p := unsafe { nil }
    3 | p = arr
      |   ^
    4 | mut ip := &int(unsafe { nil })
    5 | ip = arr
vlib/v/checker/tests/fixed_array_conv.vv:3:5: error: cannot assign to `p`: expected `voidptr`, not `[2]int`
    1 | arr := [2, 3]!
    2 | mut p := unsafe { nil }
    3 | p = arr
      |     ~~~
    4 | mut ip := &int(unsafe { nil })
    5 | ip = arr
vlib/v/checker/tests/fixed_array_conv.vv:5:4: error: mismatched types `&int` and `[2]int`
    3 | p = arr
    4 | mut ip := &int(unsafe { nil })
    5 | ip = arr
      |    ^
    6 | _ = &int(arr)
    7 | _ = p
vlib/v/checker/tests/fixed_array_conv.vv:5:6: error: cannot assign to `ip`: expected `&int`, not `[2]int`
    3 | p = arr
    4 | mut ip := &int(unsafe { nil })
    5 | ip = arr
      |      ~~~
    6 | _ = &int(arr)
    7 | _ = p
vlib/v/checker/tests/fixed_array_conv.vv:12:10: error: cannot use `[2]int` as `&u8` in argument 1 to `tos`
   10 | unsafe {
   11 |     _ = memdup(arr, 1)
   12 |     _ = tos(arr, 1)
      |             ~~~
   13 |     fn (p &int) {}(arr)
   14 | }
vlib/v/checker/tests/fixed_array_conv.vv:13:17: error: cannot use `[2]int` as `&int` in argument 1 to `anon`
   11 |     _ = memdup(arr, 1)
   12 |     _ = tos(arr, 1)
   13 |     fn (p &int) {}(arr)
      |                    ~~~
   14 | }
